# GO-wongnok/cmd/server/docs/swagger.yaml
@@ -331,6 +331,37 @@ paths:
       summary: Update food recipe
       tags:
       - food-recipes
+  /api/v1/food-recipes/{id}/favorites:
+    get:
+      consumes:
+      - application/json
+      description: Get all favorites
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.FavoriteResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get favorites
+      tags:
+      - favorite
   /api/v1/food-recipes/{id}/ratings:
     get:
       consumes:
@@ -405,30 +436,6 @@ paths:
       tags:
       - ratings
   /api/v1/food-recipes/favorites:
-    get:
-      consumes:
-      - application/json
-      description: Get all favorites
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.FavoriteResponse'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Get favorites
-      tags:
-      - favorite
     post:
       consumes:
       - application/json
